--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body style="background-color:black;">
 
-		<img src="stars.png" alt="this is me" style="width:599px;height:337px;">
+		<span title="I miss you."><img src="stars.png" alt="this is me" style="width:599px;height:337px;"></span>
 
 	</body>
 </html>
